--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
 		"preview": "astro preview",
 		"astro": "astro",
 		"lint": "biome lint --no-errors-on-unmatched --files-ignore-unknown=true .",
-		"lint-fix": "biome lint --apply --no-errors-on-unmatched --files-ignore-unknown=true .",
+		"lint-fix": "biome lint --write --no-errors-on-unmatched --files-ignore-unknown=true .",
 		"format": "biome format --no-errors-on-unmatched --files-ignore-unknown=true --write .",
 		"type-check": "tsc --noEmit -p tsconfig.json",
-		"prepare": "if [ -z \"$CI\" ]; then husky; fi"
+		"prepare": "if [ -z \"$CI\" ]; then husky; fi",
+		"fix": "npm run format && npm run lint-fix"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/sitemap": "^3.2.1",
 		"@astrojs/tailwind": "^5.1.5",
 		"@astrojs/ts-plugin": "^1.10.4",
+		"@fontsource/inter": "^5.2.6",
+		"@fontsource/jetbrains-mono": "^5.2.6",
+		"@fontsource/poppins": "^5.2.6",
 		"astro": "^5.1.9",
 		"globby": "^14.0.1",
 		"html-minifier": "^4.0.0",
@@ -30,7 +34,7 @@
 		"unist-util-visit": "^5.0.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^2.1.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/node": "^22.9.0",
 		"constructs": "^10.4.2",
