--- a/package.json
+++ b/package.json
@@ -4,43 +4,44 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build && node process-html.mjs",
+		"build": "astro build && node process-html.mjs",
 		"preview": "astro preview",
-		"astro": "astro",
-		"lint": "biome lint --no-errors-on-unmatched --files-ignore-unknown=true .",
-		"lint-fix": "biome lint --write --no-errors-on-unmatched --files-ignore-unknown=true .",
-		"format": "biome format --no-errors-on-unmatched --files-ignore-unknown=true --write .",
-		"type-check": "tsc --noEmit -p tsconfig.json",
 		"prepare": "if [ -z \"$CI\" ]; then husky; fi",
-		"fix": "npm run format && npm run lint-fix"
+		"lint": "biome lint --no-errors-on-unmatched",
+		"format": "biome format --no-errors-on-unmatched --write",
+		"check:ts": "tsc --noEmit",
+		"check:fix": "biome check --write",
+		"check:changed:fix": "biome check --changed --no-errors-on-unmatched --write",
+		"fix": "npm run check:fix && npm run check:ts",
+		"outdated": "npm outdated",
+		"update": "npx npm-check-updates -u && npm install"
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/sitemap": "^3.2.1",
-		"@astrojs/tailwind": "^5.1.5",
-		"@astrojs/ts-plugin": "^1.10.4",
 		"@fontsource/inter": "^5.2.6",
 		"@fontsource/jetbrains-mono": "^5.2.6",
 		"@fontsource/poppins": "^5.2.6",
-		"astro": "^5.1.9",
-		"globby": "^14.0.1",
-		"html-minifier": "^4.0.0",
-		"jsdom": "^24.1.1",
-		"mdast-util-to-string": "^4.0.0",
-		"reading-time": "^1.5.0",
-		"sharp": "^0.33.3",
-		"tailwindcss": "^3.4.14",
-		"unist-util-visit": "^5.0.0"
+		"@tailwindcss/vite": "^4.1.11",
+		"astro": "^5.11.0",
+		"sharp": "^0.34.3"
 	},
 	"devDependencies": {
+		"@astrojs/sitemap": "^3.4.1",
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/ts-plugin": "^1.10.4",
 		"@biomejs/biome": "^2.1.1",
-		"@tailwindcss/typography": "^0.5.15",
-		"@types/node": "^22.9.0",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^24.0.13",
 		"constructs": "^10.4.2",
-		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10",
-		"typescript": "^5.7.3"
+		"globby": "^14.1.0",
+		"html-minifier": "^4.0.0",
+		"husky": "^9.1.7",
+		"jsdom": "^26.1.0",
+		"lint-staged": "^16.1.2",
+		"mdast-util-to-string": "^4.0.0",
+		"reading-time": "^1.5.0",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3",
+		"unist-util-visit": "^5.0.0"
 	},
 	"lint-staged": {
 		"*": [
