--- a/package.json
+++ b/package.json
@@ -10,21 +10,20 @@
 		"lint": "biome lint --no-errors-on-unmatched",
 		"format": "biome format --no-errors-on-unmatched --write",
 		"check:ts": "tsc --noEmit",
-		"check:fix": "biome check --write",
+		"check:fix": "biome check --write --no-errors-on-unmatched",
 		"check:changed:fix": "biome check --changed --no-errors-on-unmatched --write",
 		"fix": "npm run check:fix && npm run check:ts",
 		"outdated": "npm outdated",
 		"update": "npx npm-check-updates -u && npm install"
 	},
-	"dependencies": {
+	"dependencies": {},
+	"devDependencies": {
 		"@fontsource/inter": "^5.2.6",
 		"@fontsource/jetbrains-mono": "^5.2.6",
 		"@fontsource/poppins": "^5.2.6",
 		"@tailwindcss/vite": "^4.1.11",
+		"sharp": "^0.34.3",
 		"astro": "^5.11.0",
-		"sharp": "^0.34.3"
-	},
-	"devDependencies": {
 		"@astrojs/sitemap": "^3.4.1",
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/ts-plugin": "^1.10.4",
