--- a/.github/workflows/noDeploy.yml
+++ b/.github/workflows/noDeploy.yml
@@ -16,7 +16,7 @@ jobs:
           version: 2.0.6
 
       - name: Run Biome
-        run: npx biome ci .
+        run: biome ci .
 
       - name: Setup Node.js from .nvmrc
         uses: actions/setup-node@v4
