--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "astro/tsconfigs/strict",
-	"include": [".astro/types.d.ts", "src/**/*"],
-	"exclude": ["**/*.test.ts", "**/node_modules/**", "dist/**", ".astro"],
+	"include": [".astro/types.d.ts", "src/**/*", "**/*.test.ts"],
+	"exclude": ["**/node_modules/**", "dist/**", ".astro"],
 	"compilerOptions": {
 		"plugins": [
 			{
