--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"@astrojs/sitemap": "^3.4.1",
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/ts-plugin": "^1.10.4",
-		"@biomejs/biome": "^2.0.6",
+		"@biomejs/biome": "2.0.6",
 		"@tailwindcss/typography": "^0.5.16",
 		"constructs": "^10.4.2",
 		"globby": "^14.1.0",
