--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ on:
     # Run manually
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   lintAndBuild:
     runs-on: ubuntu-latest
