--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,10 @@ on:
   pull_request:
     branches:
       - master
-        
+
   schedule:
     # Run every 24 hours at 2 AM UTC
-    - cron: '0 2 * * *'
+    - cron: "0 2 * * *"
     # Run manually
   workflow_dispatch:
 
@@ -47,4 +47,4 @@ jobs:
         run: npm run check:ts
 
       - name: Build application
-        run: npm run build 
+        run: npm run build
