--- a/package.json
+++ b/package.json
@@ -1,47 +1,43 @@
 {
-	"name": "john-solly-dev",
+	"name": "jsolly-website",
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro check && astro build && node process-html.mjs",
+		"build": "astro build && node process-html.mjs",
 		"preview": "astro preview",
-		"astro": "astro",
-		"lint": "biome lint --no-errors-on-unmatched --files-ignore-unknown=true .",
-		"lint-fix": "biome lint --apply --no-errors-on-unmatched --files-ignore-unknown=true .",
-		"format": "biome format --no-errors-on-unmatched --files-ignore-unknown=true --write .",
-		"type-check": "tsc --noEmit -p tsconfig.json",
-		"prepare": "if [ -z \"$CI\" ]; then husky; fi"
+		"prepare": "if [ -z \"$CI\" ]; then husky; fi",
+		"lint": "biome lint --no-errors-on-unmatched",
+		"format": "biome format --no-errors-on-unmatched --write",
+		"check:ts": "tsc --noEmit",
+		"check:fix": "biome check --write --no-errors-on-unmatched",
+		"check:changed:fix": "biome check --changed --no-errors-on-unmatched --write",
+		"fix": "npm run check:fix && npm run check:ts",
+		"outdated": "npm outdated",
+		"update": "npx npm-check-updates -u && npm install"
 	},
-	"dependencies": {
+	"dependencies": {},
+	"devDependencies": {
+		"@fontsource/inter": "^5.2.6",
+		"@fontsource/jetbrains-mono": "^5.2.6",
+		"@fontsource/poppins": "^5.2.6",
+		"@tailwindcss/vite": "^4.1.11",
+		"sharp": "^0.34.3",
+		"astro": "^5.11.0",
+		"@astrojs/sitemap": "^3.4.1",
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/sitemap": "^3.2.1",
-		"@astrojs/tailwind": "^5.1.5",
 		"@astrojs/ts-plugin": "^1.10.4",
-		"astro": "^5.1.9",
-		"globby": "^14.0.1",
+		"@biomejs/biome": "2.0.6",
+		"@tailwindcss/typography": "^0.5.16",
+		"constructs": "^10.4.2",
+		"globby": "^14.1.0",
 		"html-minifier": "^4.0.0",
-		"jsdom": "^24.1.1",
+		"husky": "^9.1.7",
+		"jsdom": "^26.1.0",
 		"mdast-util-to-string": "^4.0.0",
 		"reading-time": "^1.5.0",
-		"sharp": "^0.33.3",
-		"tailwindcss": "^3.4.14",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3",
 		"unist-util-visit": "^5.0.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@tailwindcss/typography": "^0.5.15",
-		"@types/node": "^22.9.0",
-		"constructs": "^10.4.2",
-		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10",
-		"typescript": "^5.7.3"
-	},
-	"lint-staged": {
-		"*": [
-			"biome format --write --no-errors-on-unmatched --files-ignore-unknown=true",
-			"biome lint --write --no-errors-on-unmatched --files-ignore-unknown=true"
-		]
 	}
 }
